# Hedsql

./: Hedsql.cabal  README.md  cabal.sandbox.config  test.db
Hedsql/: .project  Hedsql.cabal
Hedsql/.dist-buildwrapper/: .Setup.hs.bwinfo
src/Database/: Hedsql.hs
src/Database/Hedsql/: CRUD.hs  Ext.hs  MariaDB.hs  PostgreSQL.hs  SqLite.hs
src/Database/Hedsql/Common/: AST.hs  CodeGenerator.hs  Constructor.hs  DataStructure.hs  Grammar.hs  Parser.hs  PrettyPrint.hs
src/Database/Hedsql/Common/CodeGenerator/: Type.hs
src/Database/Hedsql/Common/Constructor/: Columns.hs  Composition.hs  Conditions.hs  DataManipulation.hs  Functions.hs  Select.hs  Statements.hs  Tables.hs  TablesManipulation.hs  Types.hs  Values.hs  Wrapper.hs
src/Database/Hedsql/Common/DataStructure/: Create.hs  Delete.hs  Drop.hs  Insert.hs  Inspect.hs  Select.hs  Update.hs
src/Database/Hedsql/Common/Parser/: Interface.hs  Queries.hs  Quoter.hs  TableManipulations.hs  Type.hs
src/Database/Hedsql/Drivers/MariaDB/: CodeGenerator.hs  Constructor.hs  Driver.hs  Parser.hs
src/Database/Hedsql/Drivers/PostgreSQL/: CodeGenerator.hs  Constructor.hs  Driver.hs  Parser.hs
src/Database/Hedsql/Drivers/SqLite/: CodeGenerator.hs  Driver.hs  Parser.hs
src/Database/Hedsql/Specific/: Constructor.hs
src/Database/Hedsql/TH/: Instances.hs
src/Hedsql/: Default.hs  MariaDB.hs  PostgreSQL.hs  SqLite.hs
src/Hedsql/Common/: Constructor.hs  DataStructure.hs  DefaultParser.hs  Driver.hs  Parser.hs  Quoter.hs
src/Hedsql/Common/Constructor/: Columns.hs  Composition.hs  Conditions.hs  DataManipulation.hs  Functions.hs  Operators.hs  Select.hs  Statements.hs  Tables.hs  TablesManipulation.hs  Types.hs  Values.hs
src/Hedsql/Common/DataStructure/: Base.hs  Create.hs  Delete.hs  Drop.hs  Insert.hs  Inspect.hs  Select.hs  Update.hs
src/Hedsql/Common/Parser/: BoolFunctions.hs  Functions.hs  Interface.hs  Queries.hs  Quoter.hs  Statements.hs  TableManipulations.hs
src/Hedsql/Connectors/: Connection.hs
src/Hedsql/Connectors/Hdbc/: Connection.hs
src/Hedsql/Drivers/MariaDB/: Constructor.hs  Driver.hs  Parser.hs
src/Hedsql/Drivers/PostgreSQL/: Constructor.hs  Driver.hs  Parser.hs
src/Hedsql/Drivers/SqLite/: Driver.hs  Parser.hs
src/Hedsql/Helpers/: Json.hs  Map.hs  Patterns.hs
tests/: Test.hs
tests/Database/Hedsql/CodeGenerator/Quoter/: Tests.hs
tests/Database/Hedsql/Statements/: Create.hs  Delete.hs  Drop.hs  Insert.hs  Select.hs  Update.hs
tests/Database/Hedsql/Tests/: Delete.hs  Insert.hs  PrettyPrint.hs  Select.hs  TableManipulations.hs  Update.hs
tests/Database/Hedsql/Tests/Connection/: SqLiteSimple.hs
tests/Database/Hedsql/Utils/: SqliteSimple.hs
tests/Hedsql/Common/CodeGenerator/Quoter/: Tests.hs
tests/Hedsql/Common/Parser/: QuoterTest.hs
tests/Hedsql/Common/Parser/Queries/: Select.hs  Tests.hs
tests/Hedsql/Common/Parser/Quoter/: Tests.hs
tests/Hedsql/Common/Parser/TableManipulations/: Create.hs  Drop.hs  Tests.hs
tests/Hedsql/Helpers/: MapTest.hs
tests/IntegrationTests/: Test.hs
tests/IntegrationTests/Statements/: Create.hs
