name:           Hedsql
version:        0.1
cabal-version:  >=1.6
build-type:     Simple
author:         Leonard Monnier
stability:      alpha
maintainer:     Leonard Monnier <leonard.monnier@gmail.com>
synopsis:       EDSL for SQL
description:    Provide a convenient way to write SQL in Haskell.
category:       Database
license:        GPL-3
license-file:   LICENCE.md
copyright:      (c) 2014-2015 Leonard Monnier
tested-with:    GHC==7.8.2

library
  hs-source-dirs:   src
  ghc-options:      -Wall
                    -fglasgow-exts
  exposed-modules:  
                    Database.Hedsql.Drivers.MariaDB.Constructor,
                    Database.Hedsql.Drivers.PostgreSQL.Constructor,
                    Database.Hedsql.MariaDB,
                    Database.Hedsql.PostgreSQL,
                    Database.Hedsql.SqLite
  build-depends:    
                    base,
                    lens,
                    template-haskell,
                    fclabels
  other-modules:    
                    Database.Hedsql.Common.Constructor,
                    Database.Hedsql.Common.Constructor.Columns,
                    Database.Hedsql.Common.Constructor.Composition,
                    Database.Hedsql.Common.Constructor.DataManipulation,
                    Database.Hedsql.Common.Constructor.Functions,
                    Database.Hedsql.Common.Constructor.Select,
                    Database.Hedsql.Common.Constructor.Statements,
                    Database.Hedsql.Common.Constructor.Tables,
                    Database.Hedsql.Common.Constructor.TablesManipulation,
                    Database.Hedsql.Common.Constructor.Types,
                    Database.Hedsql.Common.Constructor.Values,
                    Database.Hedsql.Common.Constructor.Wrapper,
                    Database.Hedsql.Drivers.MariaDB.Driver,
                    Database.Hedsql.Drivers.MariaDB.Parser,
                    Database.Hedsql.Drivers.PostgreSQL.Driver,
                    Database.Hedsql.Drivers.PostgreSQL.Parser,
                    Database.Hedsql.Drivers.SqLite.Driver,
                    Database.Hedsql.Drivers.SqLite.Parser,
                    Database.Hedsql.Common.AST,
                    Database.Hedsql.Common.Parser

test-suite tests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  ghc-options:     -Wall -rtsopts
  build-depends:   
                   base,
                   HUnit,
                   QuickCheck,
                   test-framework,
                   test-framework-quickcheck2,
                   test-framework-hunit,
                   random
  hs-source-dirs:  
                   src,
                   tests
  main-is:         Test.hs
