name:           Hedsql
version:        0.1
cabal-version:  >=1.6
build-type:     Custom
author:         Leonard Monnier
stability:      alpha
maintainer:     Leonard Monnier <leonard.monnier@gmail.com>
synopsis:       EDSL for SQL
description:    Provide a convenient way to write SQL in Haskell.
category:       Database
license:        GPL-3
license-file:   LICENCE.md
copyright:      (c) 2014-2015 Leonard Monnier
tested-with:    GHC==7.10.2

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
                    Database.Hedsql.Drivers.MariaDB.Constructor,
                    Database.Hedsql.Drivers.PostgreSQL.Constructor,
                    Database.Hedsql.MariaDB,
                    Database.Hedsql.PostgreSQL,
                    Database.Hedsql.SqLite
                    Database.Hedsql.Ext
  build-depends:
                    base,
                    lens,
                    template-haskell,
                    mtl,
                    text,
                    wl-pprint-text
  other-modules:
                    Database.Hedsql.Drivers.MariaDB.Driver,
                    Database.Hedsql.Drivers.MariaDB.Parser,
                    Database.Hedsql.Drivers.PostgreSQL.Driver,
                    Database.Hedsql.Drivers.PostgreSQL.Parser,
                    Database.Hedsql.Drivers.SqLite.Driver,
                    Database.Hedsql.Drivers.SqLite.Parser,
                    Database.Hedsql.Common.AST,
                    Database.Hedsql.Common.Parser,
                    Database.Hedsql.Common.PrettyPrint,
                    Database.Hedsql.Common.Constructor

test-suite tests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  ghc-options:     -Wall -rtsopts
  build-depends:
                   base,
                   HUnit,
                   QuickCheck,
                   test-framework,
                   test-framework-quickcheck2,
                   test-framework-hunit,
                   random
  hs-source-dirs:
                   src,
                   tests
  main-is:         Test.hs
