name:           Hedsql
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Léonard Monnier
stability:      alpha
maintainer:     Léonard Monnier
synopsis:       EDSL for SQL
description:    Provide an easy way to write SQL in Haskell.
category:       Database
license:        GPL-3
copyright:      Léonard Monnier
tested-with:    GHC==
data-files:     
                Hedsql.cabal, 
                Setup.hs

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   lens >=4.0.1 && <4.1
  ghc-options:     -Wall

